# transformer

./: .gitignore  .gitignore.orig  README.md  pyproject.toml
tests/: test_transformer.py
transformer/: attention.py  encoder_decoder.py  feedforward.py  helpers.py
transformer/model/: __init__.py  attention.py  embedding.py  encoder_decoder.py  feedforward.py  positional.py  transformer.py
