[tool.poetry]
name = "transformer"
version = "0.1.0"
description = "the original transformer"
authors = ["acforvs <'vlad.al.savinov@gmail.com'>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
